Hello World usable now!

--- a/private/src/Demo/conf/Route.conf
+++ b/private/src/Demo/conf/Route.conf
@@ -1,345 +1,11 @@
 {
-	"back.iscreenway.com" : {
+	"localhost" : {
 		"routes": {
-			"images-nom": {
-
-				"route": "/images/[:id]/[:type]/[:title].jpg",
-				"controller" : "\\Venus\\src\\FrontOffice\\Controller\\Images",
-				"action": "show",
-				"content_type": "html",
-				"constraints" : {
-					"id" : "[0-9]+",
-					"title" : "[^.]+",
-					"type" : "[a-zA-Z]+"
-				},
-				"cache": {
-					"max_age": 1
-				}
-			},
 			"home": {
 
 				"route": "/",
-				"controller" : "\\Venus\\src\\BackOffice\\Controller\\Home",
+				"controller" : "\\Venus\\src\\Demo\\Controller\\Home",
 				"action": "show"
-			},
-			"liste_fiche": {
-
-				"route": "/fiches/",
-				"controller" : "\\Venus\\src\\BackOffice\\Controller\\Record",
-				"action": "all"
-			},
-			"recherche_fiche": {
-
-				"route": "/fiches-search/[:title]",
-				"controller" : "\\Venus\\src\\BackOffice\\Controller\\Record",
-				"action": "ajaxList",
-				"constraints" : {
-					"title" : "[^/ ]+"
-				}
-			},
-			"liste_une_fiche": {
-
-				"route": "/fiches/show/[:id]",
-				"controller" : "\\Venus\\src\\BackOffice\\Controller\\Record",
-				"action": "one",
-				"constraints" : {
-					"id" : "[0-9]+"
-				}
-			},
-			"modifier_fiche_ajouter_acteur": {
-
-				"route": "/fiches/show/[:id]/add/acteur",
-				"controller" : "\\Venus\\src\\BackOffice\\Controller\\Record",
-				"action": "addActor",
-				"constraints" : {
-					"id" : "[0-9]+"
-				}
-			},
-			"modifier_fiche_ajouter_equipe_technique": {
-
-				"route": "/fiches/show/[:id]/add/equipe_technique",
-				"controller" : "\\Venus\\src\\BackOffice\\Controller\\Record",
-				"action": "addTechnicalTeam",
-				"constraints" : {
-					"id" : "[0-9]+"
-				}
-			},
-			"modifier_fiche_ajouter_producteur": {
-
-				"route": "/fiches/show/[:id]/add/producteur",
-				"controller" : "\\Venus\\src\\BackOffice\\Controller\\Record",
-				"action": "addProductor",
-				"constraints" : {
-					"id" : "[0-9]+"
-				}
-			},
-			"modifier_fiche_ajouter_realisateurs": {
-
-				"route": "/fiches/show/[:id]/add/realisateur",
-				"controller" : "\\Venus\\src\\BackOffice\\Controller\\Record",
-				"action": "addRealisator",
-				"constraints" : {
-					"id" : "[0-9]+"
-				}
-			},
-			"modifier_fiche_ajouter_scenaristes": {
-
-				"route": "/fiches/show/[:id]/add/scenariste",
-				"controller" : "\\Venus\\src\\BackOffice\\Controller\\Record",
-				"action": "addScreenwriter",
-				"constraints" : {
-					"id" : "[0-9]+"
-				}
-			},
-			"modifier_fiche_ajouter_distributeur": {
-
-				"route": "/fiches/show/[:id]/add/distributeur",
-				"controller" : "\\Venus\\src\\BackOffice\\Controller\\Record",
-				"action": "addDistributor",
-				"constraints" : {
-					"id" : "[0-9]+"
-				}
-			},
-			"modifier_fiche_ajouter_societe": {
-
-				"route": "/fiches/show/[:id]/add/societe",
-				"controller" : "\\Venus\\src\\BackOffice\\Controller\\Record",
-				"action": "addCompany",
-				"constraints" : {
-					"id" : "[0-9]+"
-				}
-			},
-			"modifier_fiche_ajouter_createur": {
-
-				"route": "/fiches/show/[:id]/add/createur",
-				"controller" : "\\Venus\\src\\BackOffice\\Controller\\Record",
-				"action": "addCreator",
-				"constraints" : {
-					"id" : "[0-9]+"
-				}
-			},
-			"ajouter_fiche": {
-
-				"route": "/fiches/add",
-				"controller" : "\\Venus\\src\\BackOffice\\Controller\\Record",
-				"action": "add"
-			},
-			"modifier_fiche": {
-
-				"route": "/fiches/update/[:id]",
-				"controller" : "\\Venus\\src\\BackOffice\\Controller\\Record",
-				"action": "update",
-				"constraints" : {
-					"id" : "[0-9]+"
-				}
-			},
-			"ajouter_alias_fiche": {
-
-				"route": "/fiche/alias/add",
-				"controller" : "\\Venus\\src\\BackOffice\\Controller\\Record",
-				"action": "addAlias"
-			},
-			"liste_article": {
-
-				"route": "/articles/",
-				"controller" : "\\Venus\\src\\BackOffice\\Controller\\Article",
-				"action": "all"
-			},
-			"ajouter_article": {
-
-				"route": "/articles/add",
-				"controller" : "\\Venus\\src\\BackOffice\\Controller\\Article",
-				"action": "add"
-			},
-			"modifier_article": {
-
-				"route": "/articles/update/[:id]",
-				"controller" : "\\Venus\\src\\BackOffice\\Controller\\Article",
-				"action": "update",
-				"constraints" : {
-					"id" : "[0-9]+"
-				}
-			},
-			"liste_personne": {
-
-				"route": "/personne/",
-				"controller" : "\\Venus\\src\\BackOffice\\Controller\\Person",
-				"action": "all"
-			},
-			"ajouter_personne": {
-
-				"route": "/personne/add",
-				"controller" : "\\Venus\\src\\BackOffice\\Controller\\Person",
-				"action": "add"
-			},
-			"recherche_personne": {
-
-				"route": "/personne-search/[:firstname]/[:name]/",
-				"controller" : "\\Venus\\src\\BackOffice\\Controller\\Person",
-				"action": "ajaxList",
-				"constraints" : {
-					"firstname" : "[^/]*",
-					"name" : "[^/]*"
-				}
-			},
-			"recherche_liste_personne": {
-
-				"route": "/personne-autocomplete/[:totalname]/",
-				"controller" : "\\Venus\\src\\BackOffice\\Controller\\Person",
-				"action": "ajaxListPersons",
-				"constraints" : {
-					"totalname" : "[^/]*"
-				}
-			},
-			"recherche_liste_film": {
-
-				"route": "/film-autocomplete/[:totalname]/",
-				"controller" : "\\Venus\\src\\BackOffice\\Controller\\Record",
-				"action": "ajaxListFilms",
-				"constraints" : {
-					"totalname" : "[^/]*"
-				}
-			},
-			"modifier_personne": {
-
-				"route": "/personne/update/[:id]",
-				"controller" : "\\Venus\\src\\BackOffice\\Controller\\Person",
-				"action": "update",
-				"constraints" : {
-					"id" : "[0-9]+"
-				}
-			},
-			"ajouter_alias_personne": {
-
-				"route": "/personne/alias/add",
-				"controller" : "\\Venus\\src\\BackOffice\\Controller\\Person",
-				"action": "addAlias"
-			},
-			"liste_nationalite": {
-
-				"route": "/nationality/",
-				"controller" : "\\Venus\\src\\BackOffice\\Controller\\Nationality",
-				"action": "all"
-			},
-			"ajouter_nationalite": {
-
-				"route": "/nationality/add",
-				"controller" : "\\Venus\\src\\BackOffice\\Controller\\Nationality",
-				"action": "add"
-			},
-			"liste_distributeur": {
-
-				"route": "/distributeur/",
-				"controller" : "\\Venus\\src\\BackOffice\\Controller\\Distributor",
-				"action": "all"
-			},
-			"ajouter_distributeur": {
-
-				"route": "/distributeur/add",
-				"controller" : "\\Venus\\src\\BackOffice\\Controller\\Distributor",
-				"action": "add"
-			},
-			"liste_ba": {
-
-				"route": "/bande-annonce/",
-				"controller" : "\\Venus\\src\\BackOffice\\Controller\\Trailer",
-				"action": "all"
-			},
-			"ajouter_ba": {
-
-				"route": "/bande-annonce/add",
-				"controller" : "\\Venus\\src\\BackOffice\\Controller\\Trailer",
-				"action": "add"
-			},
-			"liste_mea": {
-
-				"route": "/mise-en-avant/",
-				"controller" : "\\Venus\\src\\BackOffice\\Controller\\Mea",
-				"action": "all"
-			},
-			"ajouter_mea": {
-
-				"route": "/mise-en-avant/add",
-				"controller" : "\\Venus\\src\\BackOffice\\Controller\\Mea",
-				"action": "add"
-			},
-			"liste_photo": {
-
-				"route": "/photo/",
-				"controller" : "\\Venus\\src\\BackOffice\\Controller\\Photo",
-				"action": "all"
-			},
-			"ajouter_photo": {
-
-				"route": "/photo/add",
-				"controller" : "\\Venus\\src\\BackOffice\\Controller\\Photo",
-				"action": "add"
-			},
-			"liste_une_photo": {
-
-				"route": "/photo/show/[:id]",
-				"controller" : "\\Venus\\src\\BackOffice\\Controller\\Photo",
-				"action": "one",
-				"constraints" : {
-					"id" : "[0-9]+"
-				}
-			},
-			"modifier_photo_ajouter_personne": {
-
-				"route": "/photo/show/[:id]/person",
-				"controller" : "\\Venus\\src\\BackOffice\\Controller\\Photo",
-				"action": "addPerson",
-				"constraints" : {
-					"id" : "[0-9]+"
-				}
-			},
-			"images": {
-
-				"route": "/images[/:file_name]",
-				"controller" : "\\Venus\\src\\FrontOffice\\Controller\\Images",
-				"action": "show",
-				"content_type": "html",
-				"constraints" : {
-					"file_name" : "[a-zA-Z_0-9]+.jpg"
-				}
-			},
-			"service": {
-
-				"route": "/ws/set",
-				"controller" : "\\Venus\\src\\WebService\\Controller\\Services",
-				"action": "setPoi",
-				"content_type": "json",
-				"get": {
-					"type": "integer",
-					"latitude": "float",
-					"longitude": "float"
-				}
-			},
-			"auto_creation_fiche": {
-
-				"route": "/url/[:type]/[:id]",
-				"controller" : "\\Venus\\src\\BackOffice\\Controller\\Record",
-				"action": "autoCreation",
-				"constraints": {
-					"id": "[0-9]+",
-					"type": "[a-zA-Z]+"
-				}
-			},
-
-
-			"actu-detail": {
-
-				"route": "/[:type]/actualites/[:id]/[:title]",
-				"controller" : "\\Venus\\src\\FrontOffice\\Controller\\Article",
-				"action": "showOne",
-				"constraints" : {
-					"id" : "[0-9]+",
-					"title" : "[a-zA-Z0-9_]+",
-					"type" : "(cinema|series|stars|critiques|dossiers)"
-				},
-				"cache": {
-					"max_age": 3600
-				}
 			}
 		}
 	}
