change phpdoc to adapt them at the project

--- a/private/conf/Const.conf
+++ b/private/conf/Const.conf
@@ -1,7 +1,7 @@
 {
 	"db_conf" : "",
 	"private_key" : ";",
-	"author" : "Judicaël Paquet <paquet.judicael@iscreenway.com>",
+	"author" : "Judicaël Paquet <judicael.paquet@gmail.com>",
 	"copyright" : "Copyright (c) 2013-2014 iScreenway FR/VN Inc. (http://www.iscreenway.com)",
 	"licence" : "https://github.com/las93/venus/blob/master/LICENSE.md Tout droit réservé à Judicaël Paquet",
 	"version" : "1.0.0",
