Add exemple of Model/Entity/Template controller

--- a/private/conf/Const.conf
+++ b/private/conf/Const.conf
@@ -1,12 +1,12 @@
 {
-	"db_conf" : "",
+	"db_conf" : "demo",
 	"private_key" : ";",
 	"author" : "Judicaël Paquet <judicael.paquet@gmail.com>",
-	"copyright" : "Copyright (c) 2013-2014 iScreenway FR/VN Inc. (http://www.iscreenway.com)",
+	"copyright" : "Copyright (c) 2013-2014 Judicaël Paquet (https://github.com/las93)",
 	"licence" : "https://github.com/las93/venus/blob/master/LICENSE.md Tout droit réservé à Judicaël Paquet",
 	"version" : "1.0.0",
 	"filesource" : "https://github.com/las93/venus",
-	"link" : "http://www.iscreenway.com",
+	"link" : "https://github.com/las93",
 	"timezone" : "Europe/Paris",
 	"autoload": {
 		"class": {
