--- a/private/src/Demo/conf/Db.conf
+++ b/private/src/Demo/conf/Db.conf
@@ -1,13 +1,13 @@
 {
     "configuration": {
-        "iscreenway": {
+        "demo": {
             "type": "mysql",
             "host": "localhost",
-            "db": "cinema",
+            "db": "demo",
             "user": "root",
             "password": "",
             "tables": {
-                "demo": {
+                "Exemple1": {
                     "fields": {
                         "id": {
                             "type": "int",
