--- a/private/conf/Db.conf
+++ b/private/conf/Db.conf
@@ -1,6 +1,6 @@
 {
     "configuration": {
-        "iscreenway": {
+        "demo": {
             "type": "mysql",
             "host": "localhost",
             "db": "cinema",
