fix bug scaffolding + advancement of tutorial

--- a/private/conf/Db.conf
+++ b/private/conf/Db.conf
@@ -3,11 +3,11 @@
         "demo": {
             "type": "mysql",
             "host": "localhost",
-            "db": "cinema",
+            "db": "demo",
             "user": "root",
             "password": "",
             "tables": {
-                "demo": {
+                "article": {
                     "fields": {
                         "id": {
                             "type": "int",
