Add setup the cache dir in the const.conf

--- a/private/conf/Const.conf
+++ b/private/conf/Const.conf
@@ -19,6 +19,7 @@
 	"facebook_app_id" : "",
 	"facebook_app_secret" : "",
 	"facebook_base_url" : "",
-	"compress_html" : true,
-	"IMG_PROD" : ""
+	"compress_html" : true, 
+	"IMG_PROD" : "",
+	"cache_dir" : "data/cache"
 }
