Add option in the scaffolding => create model if not exists bug fixed : comments with an UTF8 encode error bug fixed : param in the controller not  obligatory

--- a/private/conf/Route.conf
+++ b/private/conf/Route.conf
@@ -24,7 +24,10 @@
 				"options": {
 					"p": "string",
 					"r": false,
-					"c": false
+					"c": false,
+                    "e": false,
+                    "d": false,
+                    "f": false
 				}
 			},
 			"create_project": {
