--- a/private/conf/Const.conf
+++ b/private/conf/Const.conf
@@ -21,5 +21,8 @@
 	"facebook_base_url" : "",
 	"compress_html" : true, 
 	"IMG_PROD" : "",
+	"language" : "en",
+	"i18n_domain" : "myapp",
+    	"i18n_directory" : "../../data/i18n/",
 	"cache_dir" : "data/cache"
 }
